fix(ServiceWorker, FirebaseDeploy, Base Url):

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Application</title>
-    <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="/assets/icons/favicon.ico" type="image/png">
+    <base href="/">
+    <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/png">
 </head>
-<body class="typography">
+<body>
     <div id="app-root"></div>
 </body>
 </html>
